css/modal.css
.overlay{
    position: fixed;
    height: 100%;
    width: 100%;
    background: rgb(0 0 0/50%);
    z-index: 2;
    display:none
}

.overlay.show{

display: block;

}


/* contact us popup start */

.popcontact{
    position: fixed;
    width: 20em;
    height: 10em;
    background: rgb(216, 216, 216);
    z-index: 3;
    top: -65%;
    left: 42%;
    border-radius: 15px;
}

.popcontact.show{top: 55%;}

.pnumber{padding-left: 0.5em;}

.contactus h4{

    padding-left: 4.7em;
    padding-top: 1em;
}


@media(max-width: 1280px){
    .overlay{
        position: fixed;
        height: 100%;
        width: 100%;
        background: rgb(0 0 0/50%);
        z-index: 2;
        display:none
    }



    .popcontact{
        position: fixed;
        width: 20em;
        height: 10em;
        background: rgb(216, 216, 216);
        z-index: 3;
        top: -60%;
        left: 37.5%;
        border-radius: 15px;
    }

    .overlay.show{display: block;}
    .popcontact.show{top: 50%;}
}

@media(max-width: 1200px){
    .overlay{
        position: fixed;
        height: 100%;
        width: 100%;
        background: rgb(0 0 0/50%);
        z-index: 2;
        display:none
    }
    .popcontact{
        position: fixed;
        width: 20em;
        height: 10em;
        background: rgb(216, 216, 216);
        z-index: 3;
        top: -50%;
        left: 36%;
        border-radius: 15px;
    }

    .overlay.show{display: block;}
    .popcontact.show{top: 40%;}
}

@media(max-width: 1100px){
    .overlay{
        position: fixed;
        height: 100%;
        width: 100%;
        background: rgb(0 0 0/50%);
        z-index: 2;
        display:none
    }

    .popcontact{
        position: fixed;
        width: 20em;
        height: 10em;
        background: rgb(216, 216, 216);
        z-index: 3;
        top: -50%;
        left: 34%;
        border-radius: 15px;
    }
    .overlay.show{display: block;}
    .popcontact.show{top: 40%;}
}

@media(max-width: 1000px){
    .overlay{
        position: fixed;
        height: 100%;
        width: 100%;
        background: rgb(0 0 0/50%);
        z-index: 2;
        display:none
    }

    .popcontact{
        position: fixed;
        width: 20em;
        height: 10em;
        background: rgb(216, 216, 216);
        z-index: 3;
        top: -40%;
        left: 33%;
        border-radius: 15px;
    }
    .overlay.show{display: block;}
    .popcontact.show{top: 40%;}
}

@media(max-width: 912px){
    .overlay{
        position: fixed;
        height: 100%;
        width: 100%;
        background: rgb(0 0 0/50%);
        z-index: 2;
        display:none
    }

    .popcontact{
        position: fixed;
        width: 20em;
        height: 10em;
        background: rgb(216, 216, 216);
        z-index: 3;
        top: -40%;
        left: 32.5%;
        border-radius: 15px;
    }

    .overlay.show{display: block;}
    .popcontact.show{top: 40%;}
}

@media(max-width: 820px){
    .overlay{
        position: fixed;
        height: 100%;
        width: 100%;
        background: rgb(0 0 0/50%);
        z-index: 2;
        display:none
    }

    .popcontact{
        position: fixed;
        width: 20em;
        height: 10em;
        background: rgb(216, 216, 216);
        z-index: 3;
        top: -40%;
        left: 30.5%;
        border-radius: 15px;
    }

    .overlay.show{display: block;}
    .popcontact.show{top: 40%;}
}

@media(max-width: 768px){
    .overlay{
        position: fixed;
        height: 100%;
        width: 100%;
        background: rgb(0 0 0/50%);
        z-index: 2;
        display:none
    }

    .popcontact{
        position: fixed;
        width: 20em;
        height: 10em;
        background: rgb(216, 216, 216);
        z-index: 3;
        top: -40%;
        left: 29%;
        border-radius: 15px;
    }
    .overlay.show{display: block;}
    .popcontact.show{top: 40%;}
}

@media(max-width: 550px){
    .overlay{
        position: fixed;
        height: 100%;
        width: 100%;
        background: rgb(0 0 0/50%);
        z-index: 2;
        display:none
    }

    .popcontact{
        position: fixed;
        width: 20em;
        height: 10em;
        background: rgb(216, 216, 216);
        z-index: 3;
        top: -40%;
        left: 19%;
        border-radius: 15px;
    }
    .overlay.show{display: block;}
    .popcontact.show{top: 40%;}
}

@media(max-width: 420px){
    .overlay{
        position: fixed;
        height: 100%;
        width: 100%;
        background: rgb(0 0 0/50%);
        z-index: 2;
        display:none
    }

    .popcontact{
        position: fixed;
        width: 20em;
        height: 10em;
        background: rgb(216, 216, 216);
        z-index: 3;
        top: -40%;
        left: 11.5%;
        border-radius: 15px;
    }
    .overlay.show{display: block;}
    .popcontact.show{top: 40%;}
}

@media(max-width: 393px){
    .overlay{
        position: fixed;
        height: 100%;
        width: 100%;
        background: rgb(0 0 0/50%);
        z-index: 2;
        display:none
    }

    .popcontact{
        position: fixed;
        width: 20em;
        height: 10em;
        background: rgb(216, 216, 216);
        z-index: 3;
        top: -40%;
        left: 10%;
        border-radius: 15px;
    }
    .overlay.show{display: block;}
    .popcontact.show{top: 40%;}
}

@media(max-width: 360px){
    .overlay{
        position: fixed;
        height: 100%;
        width: 100%;
        background: rgb(0 0 0/50%);
        z-index: 2;
        display:none
    }

    .popcontact{
        position: fixed;
        width: 20em;
        height: 10em;
        background: rgb(216, 216, 216);
        z-index: 3;
        top: -40%;
        left: 6%;
        border-radius: 15px;
    }
    .overlay.show{display: block;}
    .popcontact.show{top: 40%;}
}

@media(max-width: 280px){
    .overlay{
        position: fixed;
        height: 100%;
        width: 100%;
        background: rgb(0 0 0/50%);
        z-index: 2;
        display:none
    }
    .popcontact{
        position: fixed;
        width: 15em;
        height: 10em;
        background: rgb(216, 216, 216);
        z-index: 3;
        top: -40%;
        left: 8%;
        border-radius: 15px;
    }
    .overlay.show{display: block;}
    .popcontact.show{top: 40%;}

    .contactus h4{

        padding-left: 4em;
        padding-top: 0.5em;
    }

    .contactus .pnumber{
        padding-left: 1em;
    }
    .contactus .mail{
        padding-left: 0.5em;
    }
}


/* contact us popup end */

